--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -15,15 +15,15 @@ jobs:
     - name: Checkout master
       uses: actions/checkout@v2
       with:
-        ref: master
+        ref: main
 
     - name: Pull upstream changes
       id: sync
       uses: aormsby/Fork-Sync-With-Upstream-action@v2.1
       with:
         upstream_repository: istio/istio
-        upstream_branch: master
-        target_branch: master
+        upstream_branch: main
+        target_branch: main
         git_pull_args: --rebase --tags
 
     - name: Sync the tags
