--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Checkout master
       uses: actions/checkout@v2
+      with:
+        ref: main
 
     - name: Pull upstream changes
       id: sync
@@ -23,6 +25,11 @@ jobs:
         upstream_branch: main
         target_branch: main
         git_pull_args: --rebase --tags
+
+    - name: Checkout master
+      uses: actions/checkout@v2
+      with:
+        ref: hellozee
 
     - name: Sync the tags
       run: |
