--- a/.github/workflows/create_new.yml
+++ b/.github/workflows/create_new.yml
@@ -1,9 +1,15 @@
+name: Create Release
+
 on:
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: Bump Version
+        default: v1.0.0
+        required: true
   push:
     tags:
       - '[0-9]+.[0-9]+.0'
-
-name: Create Release
 
 jobs:
   build:
@@ -12,6 +18,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          ref: "refs/tags/${{ github.event.inputs.version }}"
 
       - name: Create Release
         id: create_release
@@ -27,7 +35,7 @@ jobs:
 
       - name: Extract branch name
         shell: bash
-        run: echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/tag/} | rev | cut -d . -f2- | rev)"
+        run: echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/tags/} | rev | cut -d . -f2- | rev)"
         id: extract_tag
     
       - name: Create Branch
