--- a/.github/workflows/create_new.yml
+++ b/.github/workflows/create_new.yml
@@ -5,11 +5,8 @@ on:
     inputs:
       tag:
         description: Tag
-        default: v1.0.0
+        default: 1.0.0
         required: true
-  push:
-    tags:
-      - '[0-9]+.[0-9]+.0'
 
 jobs:
   build:
