--- a/.github/workflows/test_env.yml
+++ b/.github/workflows/test_env.yml
@@ -13,9 +13,7 @@ jobs:
     TAG: ${{ github.event.inputs.tag }}
 
   make_release:
-    strategy:
-      matrix:
-        os: [ ubuntu-latest ]
+    runs-on: [ ubuntu-latest ]
 
     name: release-builder-run
 
